--- a/assets/scss/components/_MsgStatus.scss
+++ b/assets/scss/components/_MsgStatus.scss
@@ -10,5 +10,6 @@
     vertical-align: baseline;
     line-height: 1.1em;
     cursor: default;
+    white-space: nowrap;
   }
 }
